--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Graham Batzler",
   "license": "MIT",
   "dependencies": {
+    "archiver": "^3.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
