--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "archiver": "^3.1.1",
     "dotenv": "^8.2.0",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
     "http-status-codes": "^1.4.0",
     "multer": "^1.4.2",
     "python-shell": "^1.0.8",
-    "sanitize-filename": "^1.6.3"
+    "sanitize-filename": "^1.6.3",
+    "web-push": "^3.4.1"
   }
 }
