--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-status-codes": "^1.4.0",
     "multer": "^1.4.2",
     "python-shell": "^1.0.8",
+    "queue": "^6.0.1",
     "sanitize-filename": "^1.6.3",
     "web-push": "^3.4.1"
   }
