--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.2",
     "python-shell": "^1.0.8",
     "queue": "^6.0.1",
+    "rimraf": "^3.0.0",
     "sanitize-filename": "^1.6.3",
     "web-push": "^3.4.1"
   }
