--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "rimraf": "^3.0.0",
     "sanitize-filename": "^1.6.3",
     "web-push": "^3.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
