--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
+  },
+  "engines": {
+    "node" : "12.13.0",
+    "npm": "6.12.0"
   }
 }
